--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
             <article id="main-col">
                 <h1>About Me</h1>
                 <p>
-                    This is a paragraph about yourself or your work. Use this space to introduce yourself to your web visitors.
+                    My experience includes 2 years in a cryptography lab, plus another year working at a cybersecurity range. Additionally, I am currently a member of Shia Lab (HMC) and th CPDR project (CGU).
                 </p>
                 <p>
-                    Add another paragraph here if you like, or start a new section with a different theme or topic related to your website.
+                    
                 </p>
             </article>
         </div>
