--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Your Name</p>
+        <p>&copy; 2024 Jason Paul Gounder</p>
     </footer>
 </body>
 </html>
